--- a/index.html
+++ b/index.html
@@ -2,23 +2,34 @@
 <html>
 <head>
   <title>Snake Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background: #111; font-family: sans-serif; }
-    canvas { display: block; margin: 20px auto; background: #000; border: 2px solid #0f0; }
-    #score { text-align: center; font-size: 24px; color: #0f0; margin-top: 10px; }
+    body { background: #111; font-family: sans-serif; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; }
+    canvas { background: #000; border: 2px solid #0f0; }
+    #score { text-align: center; font-size: 24px; color: #0f0; margin: 10px; }
+    .controls { display: flex; gap: 10px; margin-top: 10px; }
+    button { font-size: 20px; padding: 10px 20px; border: none; border-radius: 10px; background: #0f0; color: #000; }
   </style>
 </head>
 <body>
-  <canvas id="gameCanvas" width="400" height="400"></canvas>
   <div id="score">Score: 0</div>
+  <canvas id="gameCanvas" width="300" height="300"></canvas>
+  <div class="controls">
+    <button onclick="setDir('UP')">⬆️</button>
+  </div>
+  <div class="controls">
+    <button onclick="setDir('LEFT')">⬅️</button>
+    <button onclick="setDir('DOWN')">⬇️</button>
+    <button onclick="setDir('RIGHT')">➡️</button>
+  </div>
 
   <script>
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
     const box = 20;
-    const canvasSize = 400;
-    let snake = [{ x: 9 * box, y: 10 * box }];
+    const canvasSize = 300;
+    let snake = [{ x: 7 * box, y: 7 * box }];
     let direction = null;
     let food = {
       x: Math.floor(Math.random() * (canvasSize / box)) * box,
@@ -33,6 +44,13 @@
       else if (e.key === 'ArrowUp' && direction !== 'DOWN') direction = 'UP';
       else if (e.key === 'ArrowRight' && direction !== 'LEFT') direction = 'RIGHT';
       else if (e.key === 'ArrowDown' && direction !== 'UP') direction = 'DOWN';
+    }
+
+    function setDir(dir) {
+      if (dir === 'LEFT' && direction !== 'RIGHT') direction = 'LEFT';
+      if (dir === 'RIGHT' && direction !== 'LEFT') direction = 'RIGHT';
+      if (dir === 'UP' && direction !== 'DOWN') direction = 'UP';
+      if (dir === 'DOWN' && direction !== 'UP') direction = 'DOWN';
     }
 
     function draw() {
